<resources>

    <string name="app_name">EzGas</string>

    <string name="home_stations">Stations</string>
    <string name="home_favorites">My Favorites</string>
    <string name="home_report_problem">Report problem</string>
    <string name="home_filter">Filter</string>

    <string name="filter_title">Filter</string>
    <string name="filter_fuel">Fuel</string>
    <string name="filter_gasoline">G</string>
    <string name="filter_ethanol">E</string>
    <string name="filter_diesel">D</string>
    <string name="filter_diesel_s10">S10</string>
    <string name="filter_sort">Sort by</string>
    <string name="filter_price">Price</string>
    <string name="filter_distance">Distance</string>
    <string name="filter_distance_limit">Distance up to</string>
    <string name="filter_distance_min">5Km</string>
    <string name="filter_distance_max">50Km</string>

    <string name="details_city_state">%s, %s</string>
    <string name="details_go">Go</string>
    <string name="details_brand">Brand</string>
    <string name="details_fuels">Fuels</string>
    <string name="details_address">Address</string>
    <string name="details_added_favorite">Added to favorites</string>
    <string name="details_removed_favorite">Removed from favorites</string>

    <string name="fuel_gasoline">Gasoline</string>
    <string name="fuel_ethanol">Ethanol</string>
    <string name="fuel_diesel">Diesel</string>
    <string name="fuel_diesel_s10">Diesel S10</string>
    <string name="fuel_empty_price">---</string>

    <string name="time_now">Just now</string>

    <plurals name="time_minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <plurals name="time_hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="time_days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <string name="time_infinity">%d+ days ago</string>

    <string name="error">Error</string>
    <string name="error_retry">Retry</string>
    <string name="error_no_results_title">No results</string>
    <string name="error_no_results_message">Please try changing filter options to get more results.</string>
    <string name="error_no_favorites_title">You don\'t have any favorites yet</string>
    <string name="error_no_favorites_message">Once you favorite a station, you\'ll see them here.</string>
    <string name="error_network_title">Network Error</string>
    <string name="error_network_message">Please check your Internet connection and try again.</string>
    <string name="error_unexpected">Sorry, an unexpected error occurred</string>
    <string name="error_unavailable">Service unavailable</string>
    <string name="error_code">Error code: %d</string>

    <string name="link_direction">"https://www.google.com/maps/dir/?api=1&amp;destination=%f,%f"</string>

    <string name="misc_close">Close</string>
    <string name="misc_apply">Apply</string>
    <string name="misc_refresh">Refresh</string>
    <string name="misc_awaiting_location">Awaiting location…</string>

</resources>