<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filter_title"
            android:textAppearance="?attr/textAppearanceHeadline1"
            android:textColor="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/misc_close"
            android:src="@drawable/ic_close"
            android:tint="?attr/colorOnSurface" />

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/spacing_huge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_fuel"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@id/fuel_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/spacing_huge"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@id/gasoline"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_gasoline" />

                <Button
                    android:id="@id/ethanol"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_ethanol" />

                <Button
                    android:id="@id/diesel"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_diesel" />

                <Button
                    android:id="@id/diesel_s10"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_diesel_s10" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/selected_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Gasoline selected" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/apply"
        style="@style/Widget.EzGas.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_huge"
        android:text="@string/misc_apply" />

</LinearLayout>