<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filter_title"
            android:textAppearance="?attr/textAppearanceHeadline1"
            android:textColor="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/misc_close"
            android:src="@drawable/ic_close"
            android:tint="?attr/colorOnSurface" />

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_huge">

            <TextView
                android:id="@+id/fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_fuel"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/fuel_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/spacing_huge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@id/gasoline"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_gasoline" />

                <Button
                    android:id="@id/ethanol"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_ethanol" />

                <Button
                    android:id="@id/diesel"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_diesel" />

                <Button
                    android:id="@id/diesel_s10"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_diesel_s10" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/selected_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel_options"
                tools:text="Gasoline selected" />

            <TextView
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius_large"
                android:text="@string/filter_sort"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel_options" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/sort_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/spacing_huge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sort"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@id/sort_price"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_price" />

                <Button
                    android:id="@id/sort_distance"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_distance" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/distance_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/filter_distance_limit"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sort_options" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_medium"
                android:stepSize="5"
                android:valueFrom="@integer/distance_min"
                android:valueTo="@integer/distance_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distance_limit"
                tools:value="25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/filter_distance_min"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintBottom_toBottomOf="@id/slider_distance"
                app:layout_constraintEnd_toStartOf="@id/slider_distance"
                app:layout_constraintTop_toTopOf="@id/slider_distance" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/filter_distance_max"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintBottom_toBottomOf="@id/slider_distance"
                app:layout_constraintStart_toEndOf="@id/slider_distance"
                app:layout_constraintTop_toTopOf="@id/slider_distance" />

            <TextView
                android:id="@+id/selectedDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="@id/slider_distance"
                app:layout_constraintStart_toStartOf="@id/slider_distance"
                app:layout_constraintTop_toBottomOf="@id/slider_distance"
                tools:text="20Km selected" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/apply"
        style="@style/Widget.EzGas.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_huge"
        android:text="@string/misc_apply" />

</LinearLayout>